--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Utilitarian modules",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"No test specified\""
+    "test": "echo \"No test specified\"",
+    "serve": "docsify serve ./docs"
   },
   "keywords": [
     "utility",
